--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
-        android:text="Notes"
+        android:text="@string/notes"
         android:layout_marginStart="18dp"
         android:textColor="@color/orange"
         android:fontFamily="@font/poppins"
@@ -39,6 +39,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
+        android:contentDescription="@string/todo"
         android:src="@drawable/baseline_add_24"
         app:tint="@color/white"
         android:backgroundTint="@color/orange" />
