--- a/app/src/main/res/drawable/orange_border.xml
+++ b/app/src/main/res/drawable/orange_border.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/orange" />
+        android:color="@color/mainColor" />
 
     <corners android:radius="8dp" />
 
