--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/notes"
         android:layout_marginStart="18dp"
-        android:textColor="@color/orange"
+        android:textColor="@color/mainColor"
         android:fontFamily="@font/poppins"
         android:textSize="24sp" />
 
@@ -42,6 +42,6 @@
         android:contentDescription="@string/todo"
         android:src="@drawable/baseline_add_24"
         app:tint="@color/white"
-        android:backgroundTint="@color/orange" />
+        android:backgroundTint="@color/mainColor" />
 
 </RelativeLayout>
