--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/title"
-                android:textColor="@color/orange"
+                android:textColor="@color/mainColor"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/poppins" />
