--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="164dp"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/mainColor"
         android:contentDescription="@string/todo"
         android:src="@drawable/baseline_add_24"
-        app:tint="@color/white"
-        android:backgroundTint="@color/mainColor" />
+        app:tint="@color/white" />
 
 </RelativeLayout>
