--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -24,6 +24,7 @@
         android:id="@+id/updateSaveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="TODO"
         android:src="@drawable/baseline_check_24"
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/editNoteHeading"
